# recurring_giving_intellingence_framework

./: .gitignore  AGENT_FRAMEWORK_BENEFITS.md  AUTONOMOUS_PLANNING_ENHANCEMENTS.md  LANGGRAPH_A2A_IMPLEMENTATION.md  MEMORY_ARCHITECTURE.md  MULTI_AGENT_COLLABORATION.md  MULTI_AGENT_ENHANCEMENT_PLAN.md  README.md  TROUBLESHOOTING.md  WHAT_THE_SYSTEM_DOES.md  campaign_analysis_result.json  pyproject.toml  real_demo_results_20251129_173619.json  requirements.txt  test_campaign_analysis.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AgentChat.css  AgentChat.jsx  (+9 more)
scripts/: campaign_analysis_20251129_164205.json  campaign_analyzer.py  demo.py  donor_journey_simulation.py  interactive.py  live_campaign_intelligence.py  mcp_demo.py  orchestrated_pipeline.py  real_demo.py  run.py  start_backend.bat  start_backend.sh
src/: __init__.py  config.py
src/agents/: __init__.py  ab_testing_agent.py  campaign_data_agent.py  campaign_intelligence_agent.py  campaign_matching_engine.py  chat_orchestrator.py  community_discovery.py  donor_affinity_profiler.py  engagement_agent.py  giving_circle_orchestrator.py  recurring_curator.py  tone_checker_agent.py
src/api/: __init__.py  ag_ui_server.py  main.py
src/core/: __init__.py  a2a_protocol.py  agent_collaboration.py  autonomous_agent.py  base_agent.py  graph_memory.py  langgraph_orchestrator.py  llm_service.py  mcp_server.py  vector_memory.py
src/data/: __init__.py  models.py  synthetic.py
tests/: __init__.py  test_agents.py
(+1 files in other folders)
